--- a/secrets.toml
+++ b/secrets.toml
@@ -1,4 +1,4 @@
-GOOGLE_SHEET_ID = "1HguHMjbuAP1uZ9qgjlzkogbcLVgFyQ8XRwElmd6r8KU"
+GOOGLE_SHEET_ID = 1HguHMjbuAP1uZ9qgjlzkogbcLVgFyQ8XRwElmd6r8KU
 
 [google_credentials]
 "type": "service_account",
